# PyODB

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  environment.yaml  performance.ipynb  playground.ipynb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-package.yml
docs/: PyODBCacheExamples.md  PyODBExamples.md  conversion_example.puml  schema_creation.puml
scripts/: activate.sh  deactivate.sh
src/pyodb/: __init__.py  _assembler.py  _disassembler.py  _disassembly.py  _query_builder.py  _util.py  error.py  pyodb.py
src/pyodb/schema/: _base_schema.py  _shard_schema.py  _table.py  _table_schema.py  _unified_schema.py  shard_schema.py  unified_schema.py
src/pyodb/schema/base/: _operators.py  _sql_builders.py  _table.py  _type_defs.py
src/pyodb/schema/components/: _table.py
test/pyodb/: pyodb_test.py  util_test.py
test/pyodb/schema/: _base_schema_test.py  base_schema_test.py  shard_schema_test.py  unified_schema_test.py
test/pyodb/schema/base/: _operators_test.py  operators_test.py  sql_builders_test.py  table_test.py
test/pyodb/schema/components/: table_test.py
test/test_models/: complex_models.py  high_complex_models.py  primitive_models.py
